--- a/src/ventana/Equipo.form
+++ b/src/ventana/Equipo.form
@@ -39,44 +39,55 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Component id="separador" alignment="0" max="32767" attributes="0"/>
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="cajaDireccion" max="32767" attributes="0"/>
-                      <Group type="102" attributes="0">
-                          <Component id="comboPersonas" min="-2" pref="231" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                          <Component id="botonInsertar" max="32767" attributes="0"/>
-                      </Group>
-                      <Component id="scrollTabla" pref="485" max="32767" attributes="0"/>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="cajaCedula" alignment="0" pref="233" max="32767" attributes="0"/>
-                              <Component id="cajaNombre" alignment="0" max="32767" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="cajaApellidos" max="32767" attributes="0"/>
-                              <Component id="cajaEquipo" max="32767" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="etiquetaPersona" min="-2" max="-2" attributes="0"/>
-                              <Component id="etiquetaDatos" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="etiquetaNombre" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="203" max="-2" attributes="0"/>
-                                  <Component id="etiquetaApellidos" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="etiquetaCedula" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="213" max="-2" attributes="0"/>
-                                  <Component id="etiquetaEquipo" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                      <Group type="102" alignment="1" attributes="0">
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="etiquetaNombre" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="etiquetaCedula" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="etiquetaDireccion" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="cajaNombre" pref="328" max="32767" attributes="0"/>
+                              <Component id="cajaCedula" alignment="0" max="32767" attributes="0"/>
+                              <Component id="cajaDireccion" alignment="0" max="32767" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                                  <Component id="etiquetaPersona" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                                  <Component id="etiquetaDatos" min="-2" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="cajaEquipo" alignment="1" pref="361" max="32767" attributes="0"/>
+                              <Component id="cajaApellidos" alignment="1" max="32767" attributes="0"/>
+                              <Component id="cajaEntrenador" max="32767" attributes="0"/>
+                              <Component id="etiquetaApellidos" min="-2" max="-2" attributes="0"/>
+                              <Component id="etiquetaEquipo" min="-2" max="-2" attributes="0"/>
+                              <Component id="etiquetaEntrenador" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="scrollTabla" min="-2" pref="707" max="-2" attributes="0"/>
+                                      <Group type="102" attributes="0">
+                                          <Component id="comboPersonas" min="-2" pref="493" max="-2" attributes="0"/>
+                                          <EmptySpace max="32767" attributes="0"/>
+                                          <Component id="botonInsertar" min="-2" pref="192" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                                  <Component id="jLabel1" min="-2" pref="701" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <EmptySpace min="0" pref="10" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -100,6 +111,8 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="etiquetaDatos" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="etiquetaNombre" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="etiquetaApellidos" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -110,20 +123,26 @@
                       <Component id="cajaApellidos" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="etiquetaCedula" min="-2" max="-2" attributes="0"/>
-                      <Component id="etiquetaEquipo" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="etiquetaEquipo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="etiquetaCedula" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="cajaEquipo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="cajaCedula" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="etiquetaDireccion" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="etiquetaEntrenador" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="cajaCedula" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="cajaEquipo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="cajaEntrenador" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="cajaDireccion" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="etiquetaDireccion" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="cajaDireccion" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="16" max="32767" attributes="0"/>
+                  <EmptySpace pref="23" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -132,7 +151,7 @@
         <Component class="javax.swing.JLabel" name="etiquetaPersona">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Arial" size="14" style="1"/>
+              <Font name="Rockwell Condensed" size="24" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Jugador"/>
           </Properties>
@@ -172,7 +191,7 @@
                 </Property>
               </Properties>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="ListSelectionListener oyenteSeleccion = new ListSelectionListener() {&#xd;&#xa;    @Override&#xd;&#xa;    public void valueChanged(ListSelectionEvent e) {&#xd;&#xa;        if (e.getValueIsAdjusting()) {&#xd;&#xa;             int filaSeleccionada = tabla.getSelectedRow(); //obtener la fila seleccionada&#xd;&#xa;             &#xd;&#xa;             String nombres = (String) modeloTabla.getValueAt(filaSeleccionada, 0); //guardando filas seleccionadas&#xd;&#xa;             String apellidos = (String) modeloTabla.getValueAt(filaSeleccionada, 1);&#xd;&#xa;             String cedula = (String) modeloTabla.getValueAt(filaSeleccionada, 2);&#xd;&#xa;             String equipo = (String) modeloTabla.getValueAt(filaSeleccionada, 3);&#xd;&#xa;             String direccion = (String) modeloTabla.getValueAt(filaSeleccionada, 4);&#xd;&#xa;&#xd;&#xa;             cajaNombre.setText(nombres);&#xd;&#xa;             cajaApellidos.setText(apellidos);&#xd;&#xa;             cajaCedula.setText(cedula);&#xd;&#xa;             cajaEquipo.setText(equipo);&#xd;&#xa;             cajaDireccion.setText(direccion);&#xd;&#xa;        }&#xd;&#xa;        &#xd;&#xa;    }&#xd;&#xa;};&#xd;&#xa;&#xd;&#xa;tabla.getSelectionModel().addListSelectionListener(oyenteSeleccion);&#xd;&#xa;"/>
+                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="ListSelectionListener oyenteSeleccion = new ListSelectionListener() {&#xd;&#xa;    @Override&#xd;&#xa;    public void valueChanged(ListSelectionEvent e) {&#xd;&#xa;        if (e.getValueIsAdjusting()) {&#xd;&#xa;             int filaSeleccionada = tabla.getSelectedRow(); //obtener la fila seleccionada&#xd;&#xa;             &#xd;&#xa;             String nombres = (String) modeloTabla.getValueAt(filaSeleccionada, 0); //guardando filas seleccionadas&#xd;&#xa;             String apellidos = (String) modeloTabla.getValueAt(filaSeleccionada, 1);&#xd;&#xa;             String cedula = (String) modeloTabla.getValueAt(filaSeleccionada, 2);&#xd;&#xa;             String equipo = (String) modeloTabla.getValueAt(filaSeleccionada, 3);&#xd;&#xa;             String direccion = (String) modeloTabla.getValueAt(filaSeleccionada, 4);&#xd;&#xa;             String entrenador = (String) modeloTabla.getValueAt(filaSeleccionada, 5);&#xd;&#xa;&#xd;&#xa;             cajaNombre.setText(nombres);&#xd;&#xa;             cajaApellidos.setText(apellidos);&#xd;&#xa;             cajaCedula.setText(cedula);&#xd;&#xa;             cajaEquipo.setText(equipo);&#xd;&#xa;             cajaDireccion.setText(direccion);&#xd;&#xa;             cajaEntrenador.setText(entrenador);&#xd;&#xa;        }&#xd;&#xa;        &#xd;&#xa;    }&#xd;&#xa;};&#xd;&#xa;&#xd;&#xa;tabla.getSelectionModel().addListSelectionListener(oyenteSeleccion);&#xd;&#xa;"/>
                 <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="Equipo_tabla"/>
               </AuxValues>
             </Component>
@@ -183,7 +202,7 @@
         <Component class="javax.swing.JLabel" name="etiquetaDatos">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Arial Rounded MT Bold" size="14" style="0"/>
+              <Font name="Rockwell Condensed" size="24" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Datos del Jugador"/>
           </Properties>
@@ -240,6 +259,21 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="cajaDireccion">
+        </Component>
+        <Component class="javax.swing.JLabel" name="etiquetaEntrenador">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Entrenador"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="cajaEntrenador">
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel1">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Arial" size="14" style="1"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Oprime clic en la tabla para mostrar los datos del jugador en la secci&#xf3;n datos"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
